[gd_scene load_steps=3 format=3 uid="uid://b6y2pafgxqhj8"]

[ext_resource type="Script" path="res://environment/interactable objects/InteractionArea.gd" id="1_jf221"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4vc08"]
radius = 30.0

[node name="InteractionArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_jf221")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4vc08")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
